--- a/Web/Bookworm.Web/Views/_ViewImports.cshtml
+++ b/Web/Bookworm.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Bookworm.Web
 @using Bookworm.Web.ViewModels
+@using Bookworm.Web.ViewModels.Quotes
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Bookworm.Web
