--- a/Web/Bookworm.Web/Views/Quote/Add.cshtml
+++ b/Web/Bookworm.Web/Views/Quote/Add.cshtml
@@ -29,6 +29,6 @@
         <span asp-validation-for="MovieTitle" class="small text-danger"></span>
     </div>
     <div class="text-center">
-        <button type="submit" class="btn btn-primary text-center"><strong>Add Quote</strong></button>
+        <button type="submit" class="btn text-center form-button"><strong>Add Quote</strong></button>
     </div>
 </form>
