--- a/Web/Bookworm.Web/Views/_ViewImports.cshtml
+++ b/Web/Bookworm.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using Bookworm.Web
+@using Bookworm.Common
+@using Bookworm.Web.ViewModels.Home
 @using Bookworm.Web.ViewModels
 @using Bookworm.Web.ViewModels.Quotes
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
