--- a/Web/Bookworm.Web/Views/Shared/_Layout.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/_Layout.cshtml
@@ -14,6 +14,7 @@
         <nav class="navbar navbar-expand-sm border-bottom box-shadow mb-3" id="mainNav">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><i class="fas fa-book"></i>@GlobalConstants.SystemName</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Category" asp-action="All">Categories</a>
                 <a class="navbar-brand" asp-area="" asp-controller="Quote" asp-action="Add">Add Quote</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
