--- a/Web/Bookworm.Web/Views/_ViewImports.cshtml
+++ b/Web/Bookworm.Web/Views/_ViewImports.cshtml
@@ -3,5 +3,6 @@
 @using Bookworm.Web.ViewModels.Home
 @using Bookworm.Web.ViewModels
 @using Bookworm.Web.ViewModels.Quotes
+@using Bookworm.Web.ViewModels.Categories
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Bookworm.Web
