Added Css to Home Page

--- a/Web/Bookworm.Web/Views/Home/Index.cshtml
+++ b/Web/Bookworm.Web/Views/Home/Index.cshtml
@@ -4,35 +4,38 @@
     this.ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome to @GlobalConstants.SystemName!</h1>
-</div>
 
-<div class="card border-dark blockquote-card">
-    <div class="card-header">
-        Quote
+<section class="animate__animated animate__zoomIn welcomeSection">
+    <div class="text-center welcomeText col-8">
+        <h1 class="display-4 ">Welcome to @GlobalConstants.SystemName!<i class="fas fa-hand-sparkles"></i></h1>
     </div>
-    <div class="card-body">
-        <blockquote class="blockquote text-center">
-            <p class="quoteContent">@Model.RandomQuote.Content</p>
-            @if (Model.RandomQuote.AuthorName != null)
-            {
-                <footer class="blockquote-footer">
-                    @Model.RandomQuote.AuthorName
-                </footer>
-            }
-            @if (Model.RandomQuote.BookTitle != null)
-            {
-                <footer class="blockquote-footer">
-                    From the book: @Model.RandomQuote.BookTitle
-                </footer>
-            }
-            @if (Model.RandomQuote.MovieTitle != null)
-            {
-                <footer class="blockquote-footer">
-                    From the movie: @Model.RandomQuote.MovieTitle
-                </footer>
-            }
-        </blockquote>
+    <div class="card border-dark blockquote-card">
+        <div class="card-header">
+            Quote
+        </div>
+        <div class="card-body">
+            <blockquote class="blockquote text-center">
+                <p class="quoteContent">@Model.RandomQuote.Content</p>
+                @if (Model.RandomQuote.AuthorName != null)
+                {
+                    <footer class="blockquote-footer">
+                        @Model.RandomQuote.AuthorName
+                    </footer>
+                }
+                @if (Model.RandomQuote.BookTitle != null)
+                {
+                    <footer class="blockquote-footer">
+                        From the book: @Model.RandomQuote.BookTitle
+                    </footer>
+                }
+                @if (Model.RandomQuote.MovieTitle != null)
+                {
+                    <footer class="blockquote-footer">
+                        From the movie: @Model.RandomQuote.MovieTitle
+                    </footer>
+                }
+            </blockquote>
+        </div>
     </div>
-</div>
+</section>
+
