--- a/Web/Bookworm.Web/Views/Shared/_Layout.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/_Layout.cshtml
@@ -18,6 +18,7 @@
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><i class="fas fa-book"></i>@GlobalConstants.SystemName</a>
                 <a class="navbar-brand" asp-area="" asp-controller="Category" asp-action="All">Categories</a>
                 <a class="navbar-brand" asp-area="" asp-controller="Quote" asp-action="Add">Add Quote</a>
+                <a class="navbar-brand" role="button" onclick="fullScreen()"><i class="fas fa-expand"></i></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -52,7 +53,7 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.min.js" asp-append-version="true"></script>
     <script src="~/lib/toastr/toastr.min.js"></script>
     <script src="~/js/site.min.js" asp-append-version="true"></script>
-    <partial name="_UserMessages"/>
+    <partial name="_UserMessages" />
     @await this.RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
