--- a/Web/Bookworm.Web/Views/Shared/_Layout.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><i class="fas fa-book"></i>@GlobalConstants.SystemName</a>
                 <a class="navbar-brand" asp-area="" asp-controller="Category" asp-action="All">Categories</a>
                 <a class="navbar-brand" asp-area="" asp-controller="Quote" asp-action="Add">Add Quote</a>
-                <a class="navbar-brand" role="button" onclick="fullScreen()"><i class="fas fa-expand"></i></a>
+
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -44,6 +44,7 @@
     <footer class="footer">
         <div>
             &copy; @DateTime.Now.Year - @GlobalConstants.SystemName - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            <a  role="button" onclick="fullScreen()"><i class="fas fa-expand"></i></a>
         </div>
     </footer>
 
