--- a/Web/Bookworm.Web/Views/_ViewImports.cshtml
+++ b/Web/Bookworm.Web/Views/_ViewImports.cshtml
@@ -4,5 +4,6 @@
 @using Bookworm.Web.ViewModels
 @using Bookworm.Web.ViewModels.Quotes
 @using Bookworm.Web.ViewModels.Categories
+@using Bookworm.Web.ViewModels.Books
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Bookworm.Web
