Added upload book and add quote buttons to home page

--- a/Web/Bookworm.Web/Views/Category/All.cshtml
+++ b/Web/Bookworm.Web/Views/Category/All.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<CategoryViewModel>
 
 @{
-    this.ViewData["Title"] = "Books-Categories";
+    this.ViewData["Title"] = "Categories";
 }
 
 
