Implemented download book logic

--- a/Web/Bookworm.Web/Views/Category/All.cshtml
+++ b/Web/Bookworm.Web/Views/Category/All.cshtml
@@ -6,7 +6,7 @@
 
 
 
-<div id="categoriesConteiner" class="container">
+<div id="categoriesConteiner">
     <div class="row">
         @foreach (var category in Model)
         {
