--- a/Web/Bookworm.Web/Views/Book/All.cshtml
+++ b/Web/Bookworm.Web/Views/Book/All.cshtml
@@ -4,7 +4,11 @@
     this.ViewData["Title"] = "Books";
 }
 
-<div id="allBooksContainer" class="container">
+<div class="text-center categoryName col-8">
+    <h1 class="display-4 ">@Model.CategoryName</h1>
+</div>
+
+<div>
     <div class="row">
         @foreach (var book in Model.Books)
         {
@@ -20,35 +24,41 @@
 </div>
 @if (Model.BookCount > 0)
 {
-<hr />
+    <hr />
     <nav id="booksPagination" aria-label="...">
-    <ul class="pagination justify-content-center">
-        <li class="page-item @if (Model.HasPreviousPage == false) {<text>disabled</text>}">
-            <a id="previous" class="page-link" asp-action="All" asp-route-categoryName="@Model.CategoryName" asp-route-page="@Model.PreviousPageNumber">Previous</a>
-        </li>
-        @for (int i = Model.PageNumber - 3; i < Model.PageNumber; i++)
-        {
-            if (i > 0)
+        <ul class="pagination justify-content-center">
+            <li class="page-item 
+              @if (Model.HasPreviousPage == false) 
+              {
+                      <text>disabled</text>
+              }">
+               <a id="previous" class="page-link" asp-action="All" asp-route-categoryName="@Model.CategoryName" asp-route-page="@Model.PreviousPageNumber">Previous</a>
+            </li>
+            @for (int i = Model.PageNumber - 3; i < Model.PageNumber; i++)
             {
-                <li class="page-item"><a class="page-link" asp-action="All" asp-route-categoryName="@Model.CategoryName" asp-route-page="@i">@i</a></li>
+                if (i > 0)
+                {
+                    <li class="page-item"><a class="page-link" asp-action="All" asp-route-categoryName="@Model.CategoryName" asp-route-page="@i">@i</a></li>
+                }
             }
-        }
-        <li class="page-item active">
-            <span class="page-link">
-                @Model.PageNumber
-                <span class="sr-only">(current)</span>
-            </span>
-        </li>
-        @for (int i = Model.PageNumber + 1; i <= Model.PageNumber + 3; i++)
-        {
-            if (i <= Model.PagesCount)
+            <li class="page-item active">
+                <span class="page-link">
+                    @Model.PageNumber
+                    <span class="sr-only">(current)</span>
+                </span>
+            </li>
+            @for (int i = Model.PageNumber + 1; i <= Model.PageNumber + 3; i++)
             {
-                <li class="page-item"><a class="page-link" asp-action="All" asp-route-categoryName="@Model.CategoryName" asp-route-page="@i">@i</a></li>
+                if (i <= Model.PagesCount)
+                {
+                    <li class="page-item"><a class="page-link" asp-action="All" asp-route-categoryName="@Model.CategoryName" asp-route-page="@i">@i</a></li>
+                }
             }
-        }
-        <li class="page-item @if (Model.HasNextPage == false) {<text>disabled</text>}">
-            <a class="page-link" asp-action="All" asp-route-categoryName="@Model.CategoryName" asp-route-page="@Model.NextPageNumber">Next</a>
-        </li>
-    </ul>
-</nav>
+            <li class="page-item @if (Model.HasNextPage == false) {
+        <text>disabled</text>
+}">
+                <a class="page-link" asp-action="All" asp-route-categoryName="@Model.CategoryName" asp-route-page="@Model.NextPageNumber">Next</a>
+            </li>
+        </ul>
+    </nav>
 }
