--- a/Web/Bookworm.Web/Views/Book/CurrentBook.cshtml
+++ b/Web/Bookworm.Web/Views/Book/CurrentBook.cshtml
@@ -7,12 +7,12 @@
 <section class="bookSection">
     <div class="card border-dark">
         <div class="card-body ">
-            <div class="container px-4 px-lg-5">
+            <div class="px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-md-4">
-                        <img class="card-img-top mb-5 mb-md-0" src="@Model.ImageUrl" title="@Model.Title" alt="@Model.Title" />
+                        <img class="card-img-top mb-5 mb-md-0 animate__animated animate__zoomIn" src="@Model.ImageUrl" title="@Model.Title" alt="@Model.Title" />
                         <div class="m-4 text-center">
-                            <a asp-controller="Files" asp-action="Download" asp-route-id="@Model.Id" class="btn btn-outline-dark flex-shrink-0 ">
+                            <a asp-controller="Book" asp-action="Download" asp-route-id="@Model.Id" class="btn btn-outline-dark flex-shrink-0 ">
                                 Download
                             </a>
                         </div>
@@ -28,9 +28,18 @@
                             <h1 class="display-5">@Model.Title</h1>
                         }
                         <div class="fs-5 mb-5">
+                            <h3><i>Category:</i> @Model.CategoryName</h3>
                             <h3><i>Pages:</i> @Model.PagesCount</h3>
                             <h3><i>Language:</i> @Model.Language</h3>
                             <h3><i>Downloads:</i> @Model.DownloadsCount</h3>
+                            @foreach (var author in Model.Authors)
+                            {
+                                <h3><i>Author:</i> @author</h3>
+                            }
+                            @foreach (var publisher in Model.Publishers)
+                            {
+                                <h3><i>Publisher:</i> @publisher</h3>
+                            }
                         </div>
                     </div>
                 </div>
@@ -38,7 +47,7 @@
         </div>
     </div>
     <div class="card border-secondary col-md-13 bookDescription">
-        <h5 class="card-header" style="color:white; background-color:#34495E;">Book Description</h5>
+        <h5 class="card-header">Book Description</h5>
         <div class="card-body">
             <p class="card-text">@Model.Description</p>
         </div>
