Implemented all quotes action with view

--- a/Web/Bookworm.Web/Views/Book/All.cshtml
+++ b/Web/Bookworm.Web/Views/Book/All.cshtml
@@ -4,7 +4,7 @@
     this.ViewData["Title"] = "Books";
 }
 
-<div class="text-center categoryName col-8">
+<div class="text-center textContainer col-8">
     <h1 class="display-4 ">@Model.CategoryName</h1>
 </div>
 
