--- a/Web/Bookworm.Web/Views/Book/CurrentBook.cshtml
+++ b/Web/Bookworm.Web/Views/Book/CurrentBook.cshtml
@@ -13,7 +13,7 @@
                         <img class="card-img-top mb-5 mb-md-0 animate__animated animate__zoomIn" src="@Model.ImageUrl" title="@Model.Title" alt="@Model.Title" />
                         <div class="m-4 text-center">
                             <a asp-controller="Book" asp-action="Download" asp-route-id="@Model.Id" class="btn btn-outline-dark flex-shrink-0 ">
-                                Download
+                                Download<i class="fas fa-download icon"></i>
                             </a>
                         </div>
                     </div>
