--- a/Web/Bookworm.Web/Views/Home/Index.cshtml
+++ b/Web/Bookworm.Web/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 
 
 <section class="animate__animated animate__zoomIn welcomeSection">
-    <div class="text-center welcomeText col-8">
+    <div class="text-center textContainer col-8">
         <h1 class="display-4 ">Welcome to @GlobalConstants.SystemName!<i class="fas fa-hand-sparkles"></i></h1>
     </div>
     <div class="card border-dark blockquote-card">
@@ -45,7 +45,7 @@
         <div class="row text-center">
             <div class="m-4 col-md-6">
                 <a asp-controller="Book" asp-action="Upload" class="btn btn-lg btn-outline-dark">
-                    Upload Book
+                    Upload Book<i class="fas fa-upload icon"></i>
                 </a>
             </div>
             <div class="m-4">
