--- a/Web/Bookworm.Web/Views/Home/Index.cshtml
+++ b/Web/Bookworm.Web/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
     <div class="text-center textContainer col-8">
         <h1 class="display-4 ">Welcome to @GlobalConstants.SystemName!<i class="fas fa-hand-sparkles"></i></h1>
     </div>
-    <div class="card border-dark blockquote-card">
+    @*<div class="card border-dark blockquote-card">
         <div class="card-header">
             Quote
         </div>
@@ -36,7 +36,7 @@
                 }
             </blockquote>
         </div>
-    </div>
+    </div>*@
 </section>
 
 @if (this.User.Identity.IsAuthenticated)
