--- a/Web/Bookworm.Web/Views/Book/All.cshtml
+++ b/Web/Bookworm.Web/Views/Book/All.cshtml
@@ -4,9 +4,10 @@
     this.ViewData["Title"] = "Books";
 }
 
-<div class="text-center textContainer col-8">
+<div class="text-center textContainer ">
     <h1 class="display-4 ">@Model.CategoryName</h1>
 </div>
+<hr />
 
 <div>
     <div class="row">
