--- a/Web/Bookworm.Web/Views/Book/Upload.cshtml
+++ b/Web/Bookworm.Web/Views/Book/Upload.cshtml
@@ -4,8 +4,9 @@
     this.ViewData["Title"] = "Upload Book";
 }
 
-<h1 class="text-center">@this.ViewData["Title"]</h1>
-
+<div class="text-center textContainer col-4">
+    <h1 class="text-center">@this.ViewData["Title"]<i class="fas fa-book icon"></i></h1>
+</div>
 <form asp-action="Upload" asp-controller="Book" method="post" class="col-lg-8 offset-lg-2" enctype="multipart/form-data">
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group">
@@ -13,11 +14,6 @@
         <input asp-for="Title" type="text" class="form-control">
         <span asp-validation-for="Title" class="small text-danger"></span>
     </div>
-    @*<div class="form-group justify-content-center">
-        <label asp-for="Language"><strong>Language</strong></label>
-        <input asp-for="Language" type="text" class="form-control">
-        <span asp-validation-for="Language" class="small text-danger"></span>
-        </div>*@
     <div class="form-group">
         <label asp-for="LanguageId"><strong>Select Language</strong></label>
         <select id="mySelect" asp-for="LanguageId" class="form-control">
@@ -71,7 +67,7 @@
         <span asp-validation-for="Description" class="small text-danger"></span>
     </div>
     <div class="text-center">
-        <button type="submit" class="btn text-center"><strong>Upload Book</strong></button>
+        <button type="submit" class="btn text-center"><strong>Upload Book<i class="fas fa-upload icon"></i></strong></button>
     </div>
 </form>
 
